# upload-to-s3

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  upload_to_s3.py
.circleci/: config.yml
.github/workflows/: python-tests.yml
tests/: conftest.py  test_e2e_against_aws_s3.py  test_smoke.py
